Fixed problems with responsive mode, now the graph redraws itself when the container resizes. Fixed all visible things relative to styles and general problems with css.

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,7 @@
 	margin-top: 30px;
 	overflow: hidden;
 	z-index: 5;
+	font-family: "Open Sans" !important;
 }
 #body{
 	font-family: "Open Sans" !important;
@@ -158,3 +159,4 @@
 	width:100%;
 	vertical-align: middle;
 }
+
